# expressionEvaluator

./: .gitignore  CMakeLists.txt  README.md  constants.hpp  expressionEvaluator.cpp  expressionEvaluator.hpp
tests/: CMakeLists.txt  expressionEvaluator_tests.cpp  testData.hpp
